<resources>
    <string name="fragment_contacts_title">Komunikator</string>

    <string name="qr_code">QR code</string>
    <string name="country_code">+48</string>
    <string name="action_settings">Settings</string>
    <string name="public_key">Klucz publiczny:</string>
    <string name="fragment_qr_scanner_title">Zeskanuj kod</string>
    <string name="fragment_add_contact_title">Nowy kontakt</string>
    <string name="fragment_profile_title">Mój profil</string>
    <string name="fragment_login_title">Logowanie</string>
    <string name="menu_show_profile">Wyświetl profil</string>
    <string name="menu_add_contact">Dodaj kontakt</string>
    <string name="toast_unbind_contact">Kontakt nie jest powiązany</string>
    <string name="toast_empty_message_content">Wpisz treść wiadomości</string>
    <string name="toast_incorrect_qr">Nieprawidłowy kod</string>
    <string name="toast_contact_exists">Kontakt już istnieje, zaktualizowano klucz publiczny</string>
    <string name="toast_contact_added">Dodano kontakt</string>
    <string name="hint_password">Hasło</string>
    <string name="hint_username">Nazwa użytkownika</string>
    <string name="hint_phone">Numer telefonu</string>
    <string name="bt_generate">Wygeneruj kod</string>
    <string name="bt_add_contact">Dodaj</string>
    <string name="bt_login">Zaloguj</string>
    <string name="invalid_password">Nieprawidłowe hasło</string>
    <string name="invalid_phone">Nieprawidłowy numer</string>
    <string name="empty_password">Wpisz hasło</string>
    <string name="bt_register">Zarejestruj</string>
    <string name="hint_confirm_password">Powtórz hasło</string>
    <string name="different_passwords">Hasła różnią się</string>
    <string name="new_contact_name">Nowy kontakt</string>

</resources>
