<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_main"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="30dp" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/komunikator_logo_tr"
        android:id="@+id/imageView"
        android:layout_marginBottom="20dp"/>

    <!-- Password -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        android:maxLines="1"
        />

    <!-- Confirm Password -->
    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        android:maxLines="1"
        />

    <!-- Register Button -->
    <Button
        android:id="@+id/bt_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/bt_register"
        android:textColor="@color/bg_main"
        android:background="@color/bt_generate_bg"
        />

</LinearLayout>